# awesome-research-pdfs

./: .gitignore  README.md  pyproject.toml  research_summarizer.py
.github/workflows/: ci.yml
